更新simple web server，添加tcp socket 测试服务端

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 Audio/*.mp3
 Audio/*.pcm
 Audio/*.wav
-web_server/domain/*
-web_server/www
-web_server/log.txt
-!web_server/domain/server/
-!web_server/domain/server/**
+web_server/simple_web_server/domain/*
+web_server/simple_web_server/www
+web_server/simple_web_server/log.txt
+!web_server/simple_web_server/domain/server/
+!web_server/simple_web_server/domain/server/**
+logs/
+*Log*.*
+*.log
+*.json
+*.xml
